--- a/jade/scss/_home.scss
+++ b/jade/scss/_home.scss
@@ -100,13 +100,25 @@
         .name-list {
           padding: 70px 23px;
           position: relative;
+          min-height: 260px;
           li {
             display: block;
             width: 100%;
             font-family: $proxima_nova_light;
-            span {
+
+            &:before {
+              content: '';
+              /* font-size: 20px; */
               display: inline-block;
-              width: 86%;
+              height: 5px;
+              width: 5px;
+              background: #fff;
+              border-radius: 50%;
+              margin-right: 4px;
+              position: relative;
+              top: -1px;
+            }
+            span {
               line-height: 30px;
               vertical-align: middle;
               letter-spacing: 1px;
