--- a/html/scss/style.css
+++ b/html/scss/style.css
@@ -122,6 +122,10 @@ select {
 :-ms-input-placeholder {
   color: #757575; }
 
+/* line 67, ../../jade/scss/_common.scss */
+.other-page {
+  padding: 50px 0 107px; }
+
 /* line 1, ../../jade/scss/_icons.scss */
 [class*='iconsp-'] {
   display: inline-block;
@@ -1213,13 +1217,13 @@ select {
   margin: 0 auto; }
 
 /* line 3, ../../jade/scss/_services.scss */
-.services-page .services h1.title {
+.services-page h1.title {
   margin: 55px 0 57px 0; }
 /* line 6, ../../jade/scss/_services.scss */
-.services-page .services .services-list {
+.services-page .services-list {
   margin-bottom: 60px; }
   /* line 8, ../../jade/scss/_services.scss */
-  .services-page .services .services-list li {
+  .services-page .services-list li {
     background: #1ca5d7;
     display: inline-block;
     width: 18%;
@@ -1229,7 +1233,7 @@ select {
     margin-left: 0;
     position: relative; }
     /* line 18, ../../jade/scss/_services.scss */
-    .services-page .services .services-list li.active .traingle {
+    .services-page .services-list li.active .traingle {
       position: absolute;
       background-image: url("../images/traingle-gray.png");
       background-repeat: no-repeat;
@@ -1240,22 +1244,22 @@ select {
       background-size: 100%;
       left: 0; }
     /* line 29, ../../jade/scss/_services.scss */
-    .services-page .services .services-list li.active a {
+    .services-page .services-list li.active a {
       background-image: url(img/bg-gray.png);
       color: #1ca5d7; }
     /* line 34, ../../jade/scss/_services.scss */
-    .services-page .services .services-list li a {
+    .services-page .services-list li a {
       padding: 0;
       border-radius: 0; }
       /* line 37, ../../jade/scss/_services.scss */
-      .services-page .services .services-list li a:hover {
+      .services-page .services-list li a:hover {
         background-image: url(img/bg-gray.png);
         color: #1ca5d7; }
     /* line 42, ../../jade/scss/_services.scss */
-    .services-page .services .services-list li:last-child {
+    .services-page .services-list li:last-child {
       margin-right: 0; }
   /* line 46, ../../jade/scss/_services.scss */
-  .services-page .services .services-list h4.sub-title {
+  .services-page .services-list h4.sub-title {
     text-align: center;
     text-transform: uppercase;
     font-family: "roboto_condensed_bold";
@@ -1264,21 +1268,21 @@ select {
     width: 100%;
     position: relative; }
     /* line 54, ../../jade/scss/_services.scss */
-    .services-page .services .services-list h4.sub-title span {
+    .services-page .services-list h4.sub-title span {
       display: table-cell;
       vertical-align: middle; }
 /* line 60, ../../jade/scss/_services.scss */
-.services-page .services .services-list-content > .tab-pane.active {
+.services-page .services-list-content > .tab-pane.active {
   display: inline-block;
   color: #171a1c;
   background: white;
   padding: 40px 24px; }
   /* line 68, ../../jade/scss/_services.scss */
-  .services-page .services .services-list-content > .tab-pane.active ul li.active a {
+  .services-page .services-list-content > .tab-pane.active ul li.active a {
     background-image: url("img/bg-gray.png");
     color: #1ca5d7; }
   /* line 73, ../../jade/scss/_services.scss */
-  .services-page .services .services-list-content > .tab-pane.active ul li a {
+  .services-page .services-list-content > .tab-pane.active ul li a {
     padding: 15px 0px;
     display: inline-block;
     color: white;
@@ -1293,7 +1297,7 @@ select {
     width: 172px;
     text-align: center; }
   /* line 91, ../../jade/scss/_services.scss */
-  .services-page .services .services-list-content > .tab-pane.active .tab-content .dot {
+  .services-page .services-list-content > .tab-pane.active .tab-content .dot {
     display: inline-block;
     font-size: 80px;
     line-height: 0;
@@ -1303,7 +1307,7 @@ select {
     margin-right: 10px;
     vertical-align: top; }
   /* line 101, ../../jade/scss/_services.scss */
-  .services-page .services .services-list-content > .tab-pane.active .tab-content p {
+  .services-page .services-list-content > .tab-pane.active .tab-content p {
     display: inline-block;
     width: 85%;
     font-size: 17.89px;
@@ -1312,14 +1316,14 @@ select {
     letter-spacing: 0;
     color: black; }
   /* line 112, ../../jade/scss/_services.scss */
-  .services-page .services .services-list-content > .tab-pane.active .tab-content .tab-pane.active ul li {
+  .services-page .services-list-content > .tab-pane.active .tab-content .tab-pane.active ul li {
     margin-bottom: 25px; }
   /* line 118, ../../jade/scss/_services.scss */
-  .services-page .services .services-list-content > .tab-pane.active .tab-content .image-content .carousel-indicators {
+  .services-page .services-list-content > .tab-pane.active .tab-content .image-content .carousel-indicators {
     bottom: 2px !important;
     left: 77%; }
     /* line 121, ../../jade/scss/_services.scss */
-    .services-page .services .services-list-content > .tab-pane.active .tab-content .image-content .carousel-indicators li {
+    .services-page .services-list-content > .tab-pane.active .tab-content .image-content .carousel-indicators li {
       height: 16px;
       width: 16px;
       border-radius: 10px;
@@ -1327,10 +1331,10 @@ select {
       border: none;
       margin: 16px; }
       /* line 128, ../../jade/scss/_services.scss */
-      .services-page .services .services-list-content > .tab-pane.active .tab-content .image-content .carousel-indicators li.active {
+      .services-page .services-list-content > .tab-pane.active .tab-content .image-content .carousel-indicators li.active {
         background: white; }
   /* line 133, ../../jade/scss/_services.scss */
-  .services-page .services .services-list-content > .tab-pane.active .tab-content .image-content .carousel-caption {
+  .services-page .services-list-content > .tab-pane.active .tab-content .image-content .carousel-caption {
     left: 0;
     width: 100%;
     bottom: 0;
@@ -1341,7 +1345,7 @@ select {
     font-family: "roboto_condensed_bold";
     background-color: rgba(0, 0, 0, 0.6); }
     /* line 143, ../../jade/scss/_services.scss */
-    .services-page .services .services-list-content > .tab-pane.active .tab-content .image-content .carousel-caption span {
+    .services-page .services-list-content > .tab-pane.active .tab-content .image-content .carousel-caption span {
       display: block;
       font-family: "roboto_condensed_light";
       margin-top: 2px; }
