add slide homepage

--- a/jade/layout.jade
+++ b/jade/layout.jade
@@ -74,6 +74,7 @@ html(lang='en')
                   button.btn.btn-cancel(type="button") cancel
                   button.btn.btn-upload(type="button") upload files
                   button.btn.btn-submit(type="button") submit
+
         #header-mobile.header
           ul#menu.menu
             li
@@ -107,6 +108,8 @@ html(lang='en')
                 li: a(href="tel:0295976788")
                   i.iconsp-35-phone-white
               a.phone-mobile(href="tel:0295976788"): i.iconsp-35-phone-black
+        block slider
+
       block main
 
       .footer
