--- a/jade/index.jade
+++ b/jade/index.jade
@@ -1,4 +1,27 @@
 extends layout
+block slider
+  .wrapper-main-bxslider
+    ul.main-bxslider
+      li
+        img(src="images/slide-1.jpg" height="730")
+        .title
+          h3 able to evolve with new design concepts and modern trends.
+          span Giving the client the opportunity to capture customers with ease.
+      li
+        img(src="images/slide-2.jpg" height="730")
+        .title
+          h3 able to evolve with new design concepts and modern trends.
+          span Giving the client the opportunity to capture customers with ease.
+      li
+        img(src="images/slide-3.jpg" height="730")
+        .title
+          h3 able to evolve with new design concepts and modern trends.
+          span Giving the client the opportunity to capture customers with ease.
+      li
+        img(src="images/slide-4.jpg" height="730")
+        .title
+          h3 able to evolve with new design concepts and modern trends.
+          span Giving the client the opportunity to capture customers with ease.
 block main
   .services
     .container
@@ -13,16 +36,16 @@ block main
               i.iconsp-steel
             ul.name-list
               li
-                
+
                 span Service Name
               li
-                
+
                 span Service Name
               li
-                
+
                 span Service Name
               li
-                
+
                 span Service Name
         li
           a(href="")
@@ -33,16 +56,16 @@ block main
               i.iconsp-fridge
             ul.name-list
               li
-                
+
                 span Service Name
               li
-                
+
                 span Service Name
               li
-                
+
                 span Service Name
               li
-                
+
                 span Service Name
         li
           a(href="")
@@ -53,16 +76,16 @@ block main
               i.iconsp-shopfitting
             ul.name-list
               li
-                
+
                 span Service Name
               li
-                
+
                 span Service Name
               li
-                
+
                 span Service Name
               li
-                
+
                 span Service Name
         li
           a(href="")
@@ -73,16 +96,16 @@ block main
               i.iconsp-catering
             ul.name-list
               li
-                
+
                 span Service Name
               li
-                
+
                 span Service Name
               li
-                
+
                 span Service Name
               li
-                
+
                 span Service Name
         li
           a(href="")
