Convert HTML/CSS Catering Equipment on Service Page

--- a/jade/services.jade
+++ b/jade/services.jade
@@ -64,7 +64,7 @@ block main
                   span.dot .
                   p psa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
               ul.image-content.col-md-7
-                #service-one-slider.carousel.slide(data-ride='carousel')
+                #service-one-slider.carousel.slide(data-ride='carousel' data-interval='false')
                   ol.carousel-indicators
                     li.active(data-target='#service-one-slider', data-slide-to='0')
                     li(data-target='#service-one-slider', data-slide-to='1')
@@ -141,16 +141,42 @@ block main
               .image-content.col-md-7
                 img(src="images/catering-landing.jpg")
             .tab-pane#catering-one
-              ul.text-content.col-md-5
+              ul.text-content.col-md-6
                 li
+                  span.dot .
                   h2.title waldorf gas single pan deep fryer
                 li
                   span.dot .
-                  p Sed ut perspiciatis unde omnis iste natus error sit
+                  p 600mm single pan gas fryer 31L oil capacity
                 li
                   span.dot .
-                  p voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque
+                  p 31kg/hr production rate 90MJ multi−jet target burner
                 li
                   span.dot .
-                  p psa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-              ul.image-content.col-md-7
+                  p Easy clean stainless steel open pan Available in Natural Gas & LPG
+                li
+                  span.dot .
+                  p Units supplied complete with gas type conversion kits
+                li
+                  span.dot .
+                  p Twin pan fryer flexibility Full single pan performance
+                li
+                  span.dot .
+                  p Patented infra−red burner sys
+                li
+                  span.dot .
+                  p Browse other brands for this product:
+              ul.image-content.col-md-6
+                img(src="images/catering-fryer.png")
+              .logo-slider.col-md-12(style="display: none")
+                ul.slides
+                  li
+                    img(src="images/slide-1.jpg")
+                  li
+                    img(src="images/slide-1.jpg")
+                  li
+                    img(src="images/slide-1.jpg")
+                  li
+                    img(src="images/slide-1.jpg")
+                  li
+                    img(src="images/slide-1.jpg")
