--- a/jade/layout.jade
+++ b/jade/layout.jade
@@ -9,6 +9,7 @@ html(lang='en')
       script(src='js/html5shiv.min.js')
       script(src='js/respond.min.js')
     // stylesheet
+    link(href='scss/flexslider.css', type='text/css', rel='stylesheet')
     link(href='scss/bootstrap.min.css', type='text/css', rel='stylesheet')
     link(href='scss/style.css', type='text/css', rel='stylesheet')
   body
@@ -127,7 +128,8 @@ html(lang='en')
 
 
     script(src="js/jquery.min.js" type='text/javascript')
-    script(src='js/jquery.bxslider.min.js' type='text/javascript')
+    script(src="js/jquery.flexslider-min.js" type='text/javascript')
     script(src='js/bootstrap.min.js' type='text/javascript')
+    script(src='js/jquery.bxslider.min.js' type='text/javascript')
     script(src='js/jquery.slicknav.min.js' type='text/javascript')
     script(src='js/script.js' type='text/javascript')
