--- a/jade/scss/_services.scss
+++ b/jade/scss/_services.scss
@@ -115,6 +115,7 @@
         }
       }
       .image-content {
+        text-align: center;
         .carousel-indicators {
           bottom: 2px !important;
           left: 77%;
@@ -149,4 +150,55 @@
       }
     }
   }
+  .services-list-content #catering-equipment {
+    .tab-pane.active {
+      .text-content {
+        li {
+          margin-bottom: 0;
+          &:first-child {
+            margin-bottom: 22px;
+            .dot {
+              opacity: 0;
+            }
+          }
+          &:last-child {
+            margin-top: 32px;
+            .dot {
+              opacity: 0;
+            }
+            p {
+              font-family: $proxima_nova_light;
+              font-size: 14.06px;
+              color: #9c9c9c;
+              font-style: italic;
+            }
+          }
+        }
+        h2.title {
+          font-family: $roboto_condensed_bold;
+          font-size: 25.56px;
+          color: black;
+          text-transform: uppercase;
+          display: inline-block;
+          width: 90%;
+          letter-spacing: 0.5px;
+          line-height: 32px;
+        }
+      }
+      &#catering-one {
+        .image-content img {
+          width: auto;
+          position: relative;
+          top: 115px;
+        }
+      }
+    }
+  }
 }
+.carousel-inner .active.left  { left: -33%;             }
+.carousel-inner .active.right { left: 33%;              }
+.carousel-inner .next         { left: 33%               }
+.carousel-inner .prev         { left: -33%              }
+.carousel-control.left        { background-image: none; }
+.carousel-control.right       { background-image: none; }
+.carousel-inner .item         { background: white;      }
