--- a/html/scss/style.css
+++ b/html/scss/style.css
@@ -58,12 +58,12 @@ table {
 
 /* line 1, ../../jade/scss/_common.scss */
 html {
-  background-color: #ffffff; }
+  background-color: white; }
 
 /* line 4, ../../jade/scss/_common.scss */
 body {
   background-color: #171a1c;
-  color: #ffffff;
+  color: white;
   font-family: "proxima_nova_light";
   font-size: 16px;
   -webkit-text-size-adjust: 100%; }
@@ -314,7 +314,7 @@ select {
 /* line 99, ../../jade/scss/_bxslider.scss */
 .bx-wrapper .bx-pager.bx-default-pager a:hover,
 .bx-wrapper .bx-pager.bx-default-pager a.active {
-  background: #ffffff; }
+  background: white; }
 
 /* DIRECTION CONTROLS (NEXT / PREV) */
 /* line 106, ../../jade/scss/_bxslider.scss */
@@ -398,7 +398,7 @@ select {
   position: absolute;
   bottom: 0;
   left: 0;
-  background: #666 \9;
+  background: #666666 \9;
   background: rgba(80, 80, 80, 0.75);
   width: 100%; }
 
@@ -618,7 +618,7 @@ select {
   display: none; }
 /* line 27, ../../jade/scss/_layout.scss */
 .page .header {
-  background-color: #ffffff;
+  background-color: white;
   color: #171a1c; }
   /* line 30, ../../jade/scss/_layout.scss */
   .page .header .logo {
@@ -666,7 +666,7 @@ select {
       left: -46px;
       top: 37px;
       background: #1ca5d7;
-      color: #ffffff;
+      color: white;
       text-align: center; }
       /* line 76, ../../jade/scss/_layout.scss */
       .page .header .menu .sub-menu li {
@@ -674,7 +674,7 @@ select {
         display: block; }
         /* line 79, ../../jade/scss/_layout.scss */
         .page .header .menu .sub-menu li:hover {
-          background: #ffffff;
+          background: white;
           -webkit-box-shadow: inset 0px 1px 3px 0px dimgray;
           -moz-box-shadow: inset 0px 1px 3px 0px dimgray;
           box-shadow: inset 0px 1px 3px 0px dimgray; }
@@ -756,7 +756,7 @@ select {
         color: #343434; }
       /* line 165, ../../jade/scss/_layout.scss */
       .page .header .enquire .box-enquire .select-style {
-        background: url(img/btn-dropdown.png) no-repeat 94% #fff;
+        background: url(img/btn-dropdown.png) no-repeat 94% white;
         display: inline-block;
         overflow: hidden;
         vertical-align: middle;
@@ -821,7 +821,7 @@ select {
     /* line 233, ../../jade/scss/_layout.scss */
     .page .header .enquire .btn {
       border-radius: 0;
-      background: #ffffff;
+      background: white;
       width: 150px;
       display: block;
       margin-bottom: 18px;
@@ -840,7 +840,7 @@ select {
       /* line 251, ../../jade/scss/_layout.scss */
       .page .header .enquire .btn.btn-submit {
         background: #1ca5d7;
-        color: #ffffff;
+        color: white;
         font-family: "roboto_condensed_bold";
         font-size: 18px;
         letter-spacing: 1px;
@@ -860,7 +860,7 @@ select {
   background-color: black; }
   /* line 274, ../../jade/scss/_layout.scss */
   .page .footer i {
-    background-color: #ffffff;
+    background-color: white;
     vertical-align: middle;
     margin-right: 40px; }
   /* line 279, ../../jade/scss/_layout.scss */
@@ -1155,7 +1155,7 @@ select {
           width: 0px;
           border-top: 12px solid transparent;
           border-bottom: 12px solid transparent;
-          border-left: 10px solid #ffffff;
+          border-left: 10px solid white;
           right: -10px;
           top: 45%;
           z-index: 1; }
@@ -1275,17 +1275,18 @@ select {
 .services-page .services-list-content > .tab-pane.active {
   display: inline-block;
   color: #171a1c;
-  background: #ffffff;
-  padding: 40px 24px; }
-  /* line 68, ../../jade/scss/_services.scss */
+  background: white;
+  padding: 40px 24px;
+  width: 100%; }
+  /* line 69, ../../jade/scss/_services.scss */
   .services-page .services-list-content > .tab-pane.active ul li.active a {
     background-image: url("img/bg-gray.png");
     color: #1ca5d7; }
-  /* line 73, ../../jade/scss/_services.scss */
+  /* line 74, ../../jade/scss/_services.scss */
   .services-page .services-list-content > .tab-pane.active ul li a {
     padding: 15px 0px;
     display: inline-block;
-    color: #ffffff;
+    color: white;
     background: #1ca5d7;
     text-transform: uppercase;
     font-size: 17.89px;
@@ -1296,7 +1297,7 @@ select {
     margin-bottom: 10px;
     width: 172px;
     text-align: center; }
-  /* line 91, ../../jade/scss/_services.scss */
+  /* line 92, ../../jade/scss/_services.scss */
   .services-page .services-list-content > .tab-pane.active .tab-content .dot {
     display: inline-block;
     font-size: 80px;
@@ -1306,7 +1307,7 @@ select {
     margin-top: -12px;
     margin-right: 10px;
     vertical-align: top; }
-  /* line 101, ../../jade/scss/_services.scss */
+  /* line 102, ../../jade/scss/_services.scss */
   .services-page .services-list-content > .tab-pane.active .tab-content p {
     display: inline-block;
     width: 85%;
@@ -1315,17 +1316,17 @@ select {
     line-height: 25.56px;
     letter-spacing: 0;
     color: black; }
-  /* line 112, ../../jade/scss/_services.scss */
+  /* line 113, ../../jade/scss/_services.scss */
   .services-page .services-list-content > .tab-pane.active .tab-content .tab-pane.active ul li {
     margin-bottom: 25px; }
-  /* line 117, ../../jade/scss/_services.scss */
+  /* line 118, ../../jade/scss/_services.scss */
   .services-page .services-list-content > .tab-pane.active .tab-content .image-content {
     text-align: center; }
-    /* line 119, ../../jade/scss/_services.scss */
+    /* line 120, ../../jade/scss/_services.scss */
     .services-page .services-list-content > .tab-pane.active .tab-content .image-content .carousel-indicators {
       bottom: 2px !important;
       left: 77%; }
-      /* line 122, ../../jade/scss/_services.scss */
+      /* line 123, ../../jade/scss/_services.scss */
       .services-page .services-list-content > .tab-pane.active .tab-content .image-content .carousel-indicators li {
         height: 16px;
         width: 16px;
@@ -1333,10 +1334,10 @@ select {
         background: #1ca5d7;
         border: none;
         margin: 16px; }
-        /* line 129, ../../jade/scss/_services.scss */
+        /* line 130, ../../jade/scss/_services.scss */
         .services-page .services-list-content > .tab-pane.active .tab-content .image-content .carousel-indicators li.active {
-          background: #ffffff; }
-    /* line 134, ../../jade/scss/_services.scss */
+          background: white; }
+    /* line 135, ../../jade/scss/_services.scss */
     .services-page .services-list-content > .tab-pane.active .tab-content .image-content .carousel-caption {
       left: 0;
       width: 100%;
@@ -1344,36 +1345,36 @@ select {
       padding: 14px 0 24px 22px;
       text-align: left;
       font-size: 15.33px;
-      color: #ffffff;
+      color: white;
       font-family: "roboto_condensed_bold";
       background-color: rgba(0, 0, 0, 0.6); }
-      /* line 144, ../../jade/scss/_services.scss */
+      /* line 145, ../../jade/scss/_services.scss */
       .services-page .services-list-content > .tab-pane.active .tab-content .image-content .carousel-caption span {
         display: block;
         font-family: "roboto_condensed_light";
         margin-top: 2px; }
-/* line 156, ../../jade/scss/_services.scss */
+/* line 157, ../../jade/scss/_services.scss */
 .services-page .services-list-content #catering-equipment .tab-pane.active .text-content li {
   margin-bottom: 0; }
-  /* line 158, ../../jade/scss/_services.scss */
+  /* line 159, ../../jade/scss/_services.scss */
   .services-page .services-list-content #catering-equipment .tab-pane.active .text-content li:first-child {
     margin-bottom: 22px; }
-    /* line 160, ../../jade/scss/_services.scss */
+    /* line 161, ../../jade/scss/_services.scss */
     .services-page .services-list-content #catering-equipment .tab-pane.active .text-content li:first-child .dot {
       opacity: 0; }
-  /* line 164, ../../jade/scss/_services.scss */
+  /* line 165, ../../jade/scss/_services.scss */
   .services-page .services-list-content #catering-equipment .tab-pane.active .text-content li:last-child {
     margin-top: 32px; }
-    /* line 166, ../../jade/scss/_services.scss */
+    /* line 167, ../../jade/scss/_services.scss */
     .services-page .services-list-content #catering-equipment .tab-pane.active .text-content li:last-child .dot {
       opacity: 0; }
-    /* line 169, ../../jade/scss/_services.scss */
+    /* line 170, ../../jade/scss/_services.scss */
     .services-page .services-list-content #catering-equipment .tab-pane.active .text-content li:last-child p {
       font-family: "proxima_nova_light";
       font-size: 14.06px;
       color: #9c9c9c;
       font-style: italic; }
-/* line 177, ../../jade/scss/_services.scss */
+/* line 178, ../../jade/scss/_services.scss */
 .services-page .services-list-content #catering-equipment .tab-pane.active .text-content h2.title {
   font-family: "roboto_condensed_bold";
   font-size: 25.56px;
@@ -1383,37 +1384,37 @@ select {
   width: 90%;
   letter-spacing: 0.5px;
   line-height: 32px; }
-/* line 189, ../../jade/scss/_services.scss */
+/* line 190, ../../jade/scss/_services.scss */
 .services-page .services-list-content #catering-equipment .tab-pane.active#catering-one .image-content img {
   width: auto;
   position: relative;
   top: 115px; }
 
-/* line 198, ../../jade/scss/_services.scss */
+/* line 199, ../../jade/scss/_services.scss */
 .carousel-inner .active.left {
   left: -33%; }
 
-/* line 199, ../../jade/scss/_services.scss */
+/* line 200, ../../jade/scss/_services.scss */
 .carousel-inner .active.right {
   left: 33%; }
 
-/* line 200, ../../jade/scss/_services.scss */
+/* line 201, ../../jade/scss/_services.scss */
 .carousel-inner .next {
   left: 33%; }
 
-/* line 201, ../../jade/scss/_services.scss */
+/* line 202, ../../jade/scss/_services.scss */
 .carousel-inner .prev {
   left: -33%; }
 
-/* line 202, ../../jade/scss/_services.scss */
+/* line 203, ../../jade/scss/_services.scss */
 .carousel-control.left {
   background-image: none; }
 
-/* line 203, ../../jade/scss/_services.scss */
+/* line 204, ../../jade/scss/_services.scss */
 .carousel-control.right {
   background-image: none; }
 
-/* line 204, ../../jade/scss/_services.scss */
+/* line 205, ../../jade/scss/_services.scss */
 .carousel-inner .item {
   background: white; }
 
@@ -1437,14 +1438,14 @@ select {
     position: relative;
     z-index: 1;
     vertical-align: top;
-    background-color: #ffffff;
+    background-color: white;
     padding: 5px 0; }
     /* line 22, ../../jade/scss/_responsive.scss */
     .slicknav_menu .slicknav_icon {
       margin: 0; }
     /* line 25, ../../jade/scss/_responsive.scss */
     .slicknav_menu .slicknav_btn {
-      background-color: #ffffff;
+      background-color: white;
       float: left;
       margin: 0;
       padding-left: 25px; }
@@ -1503,7 +1504,7 @@ select {
       /* line 83, ../../jade/scss/_responsive.scss */
       .slicknav_menu .slicknav_nav a:hover {
         background: none;
-        color: #ffffff; }
+        color: white; }
       /* line 87, ../../jade/scss/_responsive.scss */
       .slicknav_menu .slicknav_nav a .slicknav_arrow {
         display: none; }
@@ -1760,5 +1761,3 @@ select {
     /* line 354, ../../jade/scss/_responsive.scss */
     .home-page .testimonials .bx-pager {
       bottom: -20px; } }
-
-/*# sourceMappingURL=style.css.map */
